tests/expectations/compiler/function/mutual_recursion_fail.out
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:14:16
     |
  14 |         return bax(n);
     |                ^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:18:16
     |
  18 |         return baz(n);
     |                ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:4:12
     |
   4 |     return bar(n);
     |            ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:9:12
     |
   9 |     return foo(n);
     |            ^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `test.aleo/baz` --> `test.aleo/bax` --> `test.aleo/baz`
